# toy_os

./: Cargo.toml  err.txt
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  serial.rs  util.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs
src/driver/: mod.rs  rtl8139_net_card.rs
src/driver/net/: mod.rs  rtl8139.rs
src/pci/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
