[package]
name = "toy_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.8",  features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"  
linked_list_allocator = "0.9.0"
#rtl8139-rs = "0.1.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-args = ["-netdev", "user,id=user.0,hostfwd=tcp::9999-:9999", "-device", "rtl8139,netdev=user.0,mac=00:00:00:11:11:11",]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 30          # 300 (in seconds)

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

